fix export setup

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "artens-web",
-  "homepage": "https://artenstudio.com",
+  "homepage": ".",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
